[package]
name = "jit-sys"
description = "libjit in rust"
version = "0.1.2"
edition = "2018"
license = "MIT"
readme = "readme.md"

repository = "https://github.com/MonliH/jit-sys"

[dependencies]
libc = "0.2.98"

[build-dependencies]
bindgen = "0.59.1"

[features]
docs-rs = []

[package.metadata.docs.rs]
features = ["docs-rs"]
